# neighbourpro-backend

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  compose.yaml  env.sample  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main.yml
app/: dependencies.py  main.py
app/database/: models.py  settings.py
app/database/migrations/models/: 0_20231223195207_init.py  0_20231225141505_init.py  0_20240113111743_init.py  0_20240207105700_init.py  1_20231223201706_adds_locations.py  1_20231225145037_adds_role.py  1_20240118222628_None.py  1_20240219161358_update.py  1_20240409101722_None.py  2_20231223221542_update.py  2_20231225151706_adds_professions.py  3_20231225211720_adds_professions_for_worker.py  3_20240120111940_None.py  4_20240120200619_edited_field_reviews.py
app/routers/: admin.py  auth.py  users.py  work.py
app/utils/: logger.py  recommend.py  score.py  temp.py
src/: backend.py
