[tool.poetry]
name = "neighbourpro-backend"
version = "0.1.0"
description = "NeighbourPro application backend written using python and FastAPI"
authors = ["Sreejith IV <46400271+pzerone@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
python-dotenv = "^1.0.1"
aerich = "^0.7.2"
numpy = "^1.26.4"
geopy = "^2.4.1"
pandas = "^2.2.2"
cython = "^3.0.10"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.database.settings.TORTOISE_ORM"
location = "./app/database/migrations"
src_folder = "./."
